; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_check.c_get_canonical_locale_name.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_check.c_get_canonical_locale_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i8] c"failed to get the current locale\0A\00", align 1
@.str.1 = private unnamed_addr constant [43 x i8] c"failed to get system locale name for \22%s\22\0A\00", align 1
@.str.2 = private unnamed_addr constant [35 x i8] c"failed to restore old locale \22%s\22\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i8*)* @get_canonical_locale_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_canonical_locale_name(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call i8* @setlocale(i32 %7, i8* null)
  store i8* %8, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %13, label %11

11:                                               ; preds = %2
  %12 = call i32 (i8*, ...) @pg_fatal(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %2
  %14 = load i8*, i8** %5, align 8
  %15 = call i8* @pg_strdup(i8* %14)
  store i8* %15, i8** %5, align 8
  %16 = load i32, i32* %3, align 4
  %17 = load i8*, i8** %4, align 8
  %18 = call i8* @setlocale(i32 %16, i8* %17)
  store i8* %18, i8** %6, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %24, label %21

21:                                               ; preds = %13
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 (i8*, ...) @pg_fatal(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.1, i64 0, i64 0), i8* %22)
  br label %24

24:                                               ; preds = %21, %13
  %25 = load i8*, i8** %6, align 8
  %26 = call i8* @pg_strdup(i8* %25)
  store i8* %26, i8** %6, align 8
  %27 = load i32, i32* %3, align 4
  %28 = load i8*, i8** %5, align 8
  %29 = call i8* @setlocale(i32 %27, i8* %28)
  %30 = icmp ne i8* %29, null
  br i1 %30, label %34, label %31

31:                                               ; preds = %24
  %32 = load i8*, i8** %5, align 8
  %33 = call i32 (i8*, ...) @pg_fatal(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0), i8* %32)
  br label %34

34:                                               ; preds = %31, %24
  %35 = load i8*, i8** %5, align 8
  %36 = call i32 @pg_free(i8* %35)
  %37 = load i8*, i8** %6, align 8
  ret i8* %37
}

declare dso_local i8* @setlocale(i32, i8*) #1

declare dso_local i32 @pg_fatal(i8*, ...) #1

declare dso_local i8* @pg_strdup(i8*) #1

declare dso_local i32 @pg_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
